k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-lab
  labels:
    app.kubernetes.io/name: devops-lab
    app.kubernetes.io/part-of: devops-final
